--- a/src/template.html
+++ b/src/template.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Racka</title>
+<link href="./tailwind.css" rel="stylesheet">
 <html>
   <body>
-    <div id="app"></div>
   </body>
 </html>
