--- a/src/template.html
+++ b/src/template.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
 <title>Racka</title>
 <link href="./tailwind.css" rel="stylesheet">
 <html>
