--- a/src/template.html
+++ b/src/template.html
@@ -3,6 +3,7 @@
 <meta charset="UTF-8">
 <title>Racka</title>
 <link href="./tailwind.css" rel="stylesheet">
+<link rel="icon" type="image/x-icon" href="../icons/racka_logo.png">
 <html>
   <body>
   </body>
