--- a/src/template.html
+++ b/src/template.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8" />
 <title>Racka</title>
-<link href="./tailwind.css" rel="stylesheet">
-<link rel="icon" type="image/x-icon" href="../icons/racka_logo.png">
+<link href="./tailwind.css" rel="stylesheet" />
+<link rel="icon" type="image/x-icon" href="../icons/racka_logo.png" />
 <html>
-  <body>
-  </body>
+  <body></body>
 </html>
